--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/aws4": "^1.11.6",
     "@types/jest": "^29.5.13",
     "@types/semver": "^7.5.8",
+    "@types/yazl": "^2.4.5",
     "dotenv": "^16.4.5",
     "esbuild": "^0.24.0",
     "eslint": "^9.14.0",
