--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -49,7 +49,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LOG_FILE: test.log
           LOG_LEVEL: 2
-          UTILS_PATH: '../../common/utils'
-          INTERFACES_PATH: '../../common/interfaces'
+          COMMON_PATH: '../../common'
           SERVICES_PATH: '../../services/rate'
           
