--- a/backend/layers/dependencies/nodejs/package.json
+++ b/backend/layers/dependencies/nodejs/package.json
@@ -7,25 +7,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
     "@types/aws4": "^1.11.6",
-    "esbuild": "^0.24.0",
-    "eslint": "^9.14.0",
-    "globals": "^15.11.0",
-    "rimraf": "^5.0.10",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.12.2"
-  },
-  "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.693.0",
-    "@aws-sdk/client-s3": "^3.693.0",
-    "@aws-sdk/lib-dynamodb": "^3.693.0",
-    "@types/aws-lambda": "^8.10.145",
-    "@types/jest": "^29.5.0",
     "@types/jszip": "^3.4.0",
     "@types/yazl": "^2.4.5",
+    "globals": "^15.11.0"
+  },
+  "dependencies": {
     "axios": "^0.24.0",
     "bluebird": "^3.7.2",
     "crypto-js": "^4.2.0",
@@ -36,6 +23,7 @@
     "jszip": "^3.10.1",
     "node-fetch": "^3.1.0",
     "yazl": "^3.3.0",
-    "aws4": "^1.13.2"
+    "aws4": "^1.13.2",
+    "esbuild": "^0.24.0"
   }
 }
