--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "npm run clean && tsc --project tsconfig.handlers.json && tsc --project tsconfig.common.json && tsc --project tsconfig.rate.json && cd layers/dependencies/nodejs && npm install",
+    "layer-install": "docker run --rm -v \"%cd%/layers/dependencies/nodejs:/var/task\" node:18 bash -c \"cd /var/task && npm install --only=production\"",
+    "compile": "tsc --project tsconfig.handlers.json && tsc --project tsconfig.common.json && tsc --project tsconfig.rate.json",
+    "build": "npm run clean && npm run compile && npm run layer-install && sam build --use-container",
     "test": "npx jest --coverage --testPathIgnorePatterns='end_to_end'",
     "test:e2e": "npx jest --runInBand end_to_end",
     "lint": "npx eslint"
@@ -49,6 +51,7 @@
     "jszip": "^3.10.1",
     "node-fetch": "^3.1.0",
     "semver": "^7.6.3",
-    "yazl": "^3.3.0"
+    "yazl": "^3.3.0",
+    "esbuild": "^0.24.0"
   }
 }
