--- a/backend/layers/dependencies/nodejs/package.json
+++ b/backend/layers/dependencies/nodejs/package.json
@@ -24,6 +24,7 @@
     "node-fetch": "^3.1.0",
     "yazl": "^3.3.0",
     "aws4": "^1.13.2",
-    "esbuild": "^0.24.0"
+    "esbuild": "^0.24.0",
+    "fs-extra": "^11.2.0"
   }
 }
