--- a/backend/layers/dependencies/nodejs/package.json
+++ b/backend/layers/dependencies/nodejs/package.json
@@ -13,18 +13,19 @@
     "globals": "^15.11.0"
   },
   "dependencies": {
+    "aws4": "^1.13.2",
     "axios": "^0.24.0",
     "bluebird": "^3.7.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "esbuild": "^0.24.0",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
     "isomorphic-git": "^1.27.1",
     "jest": "29.7.0",
     "jszip": "^3.10.1",
     "node-fetch": "^3.1.0",
-    "yazl": "^3.3.0",
-    "aws4": "^1.13.2",
-    "esbuild": "^0.24.0",
-    "fs-extra": "^11.2.0"
+    "pacote": "^21.0.0",
+    "yazl": "^3.3.0"
   }
 }
