--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@types/aws4": "^1.11.6",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.13",
+    "@types/pacote": "^11.1.8",
     "@types/semver": "^7.5.8",
     "@types/yazl": "^2.4.5",
     "dotenv": "^16.4.5",
@@ -55,6 +56,7 @@
     "jest": "29.7.0",
     "jszip": "^3.10.1",
     "node-fetch": "^3.1.0",
+    "pacote": "^21.0.0",
     "semver": "^7.6.3",
     "yazl": "^3.3.0"
   }
