--- a/backend/layers/dependencies/nodejs/package.json
+++ b/backend/layers/dependencies/nodejs/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.693.0",
     "@aws-sdk/client-s3": "^3.693.0",
+    "@aws-sdk/client-secrets-manager": "^3.699.0",
     "@aws-sdk/lib-dynamodb": "^3.693.0",
     "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.0",
