updated template to get OpenSearch domain endpoint. SAM local invoke won't work unless you override the DOMAIN_ENDPOINT environment variable

--- a/backend/template.yml
+++ b/backend/template.yml
@@ -61,7 +61,7 @@ Resources:
       Role: !GetAtt CreateIndexRole.Arn
       Environment:
         Variables:
-          DOMAIN_ENDPOINT: "https://search-package-readmes-wnvohkp2wydo2ymgjsxmmslu6u.us-east-2.es.amazonaws.com"
+          DOMAIN_ENDPOINT: !GetAtt MyOpenSearchDomain.DomainEndpoint
   
   CreateIndexCustomResource:
     Type: Custom::CreateIndex
@@ -217,7 +217,7 @@ Resources:
       Environment:
         Variables:
           S3_BUCKET_NAME: !Sub "package-files-${Stage}"
-          DOMAIN_ENDPOINT: "https://search-package-readmes-wnvohkp2wydo2ymgjsxmmslu6u.us-east-2.es.amazonaws.com"
+          DOMAIN_ENDPOINT: !GetAtt MyOpenSearchDomain.DomainEndpoint
       Role: !GetAtt RegistryResetRole.Arn
 
   PackageRetrieve:
@@ -270,7 +270,7 @@ Resources:
       Environment:
         Variables:
           S3_BUCKET_NAME: !Sub "package-files-${Stage}"
-          DOMAIN_ENDPOINT: "https://search-package-readmes-wnvohkp2wydo2ymgjsxmmslu6u.us-east-2.es.amazonaws.com"
+          DOMAIN_ENDPOINT: !GetAtt MyOpenSearchDomain.DomainEndpoint
       Role: !GetAtt PackageCreateUpdateRole.Arn
 
   PackageDeleteRole:
@@ -311,7 +311,7 @@ Resources:
       Environment:
         Variables:
           S3_BUCKET_NAME: !Sub "package-files-${Stage}"
-          DOMAIN_ENDPOINT: "https://search-package-readmes-wnvohkp2wydo2ymgjsxmmslu6u.us-east-2.es.amazonaws.com"
+          DOMAIN_ENDPOINT: !GetAtt MyOpenSearchDomain.DomainEndpoint
 
 
   PackageCreate:
@@ -335,7 +335,7 @@ Resources:
       Environment:
         Variables:
           S3_BUCKET_NAME: !Sub "package-files-${Stage}"
-          DOMAIN_ENDPOINT: "https://search-package-readmes-wnvohkp2wydo2ymgjsxmmslu6u.us-east-2.es.amazonaws.com"
+          DOMAIN_ENDPOINT: !GetAtt MyOpenSearchDomain.DomainEndpoint
 
   PackageRate:
     Type: AWS::Serverless::Function
@@ -394,7 +394,7 @@ Resources:
       Role: !GetAtt GetCostRole.Arn
       Environment:
         Variables:
-          DOMAIN_ENDPOINT: "https://search-package-readmes-wnvohkp2wydo2ymgjsxmmslu6u.us-east-2.es.amazonaws.com"
+          DOMAIN_ENDPOINT: !GetAtt MyOpenSearchDomain.DomainEndpoint
 
   CreateAuthToken:
     Type: AWS::Serverless::Function
@@ -494,6 +494,9 @@ Outputs:
   ApiUrl:
     Description: "API Gateway endpoint URL"
     Value: !Sub "https://${MyApi}.execute-api.${AWS::Region}.amazonaws.com/${Stage}/"
+  OpenSearchDomainEndpoint:
+    Description: "The endpoint of the OpenSearch domain"
+    Value: !GetAtt MyOpenSearchDomain.DomainEndpoint
 
 Parameters:
   Stage:
