--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "build": "npm run clean && npm run compile && npm run layer-install && sam build --use-container",
     "test": "npx jest --coverage --testPathIgnorePatterns='end_to_end'",
     "test:e2e": "npx jest --runInBand end_to_end",
-    "lint": "npx eslint"
+    "lint": "npx eslint",
+    "temp": "docker run --rm -v \"%cd%/layers/dependencies/nodejs:/var/task\" node:18 bash -c \"cd /var/task && npm install --omit=dev\" && tsc --project tsconfig.handlers.json && tsc --project tsconfig.common.json && tsc --project tsconfig.rate.json && sam build --use-container"
   },
   "author": "",
   "license": "ISC",
