--- a/backend/layers/dependencies/nodejs/package.json
+++ b/backend/layers/dependencies/nodejs/package.json
@@ -16,8 +16,10 @@
     "aws4": "^1.13.2",
     "axios": "^0.24.0",
     "bluebird": "^3.7.2",
+    "cd": "^0.3.3",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "ece461-project-phase2": "file:../../..",
     "esbuild": "^0.24.0",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
