--- a/backend/layers/dependencies/nodejs/package.json
+++ b/backend/layers/dependencies/nodejs/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^29.5.0",
     "@types/jszip": "^3.4.0",
     "@types/yazl": "^2.4.5",
+    "aws4": "^1.13.2",
     "axios": "^0.24.0",
     "bluebird": "^3.7.2",
     "crypto-js": "^4.2.0",
@@ -36,7 +37,6 @@
     "jest": "29.7.0",
     "jszip": "^3.10.1",
     "node-fetch": "^3.1.0",
-    "yazl": "^3.3.0",
-    "aws4": "^1.13.2"
+    "yazl": "^3.3.0"
   }
 }
