--- a/backend/layers/dependencies/nodejs/package.json
+++ b/backend/layers/dependencies/nodejs/package.json
@@ -26,6 +26,7 @@
     "jest": "29.7.0",
     "jszip": "^3.10.1",
     "node-fetch": "^3.1.0",
+    "redos-detector": "^5.1.3",
     "yazl": "^3.3.0"
   }
 }
