--- a/backend/package.json
+++ b/backend/package.json
@@ -59,6 +59,7 @@
     "jszip": "^3.10.1",
     "node-fetch": "^3.1.0",
     "pacote": "^21.0.0",
+    "redos-detector": "^5.1.3",
     "semver": "^7.6.3",
     "yazl": "^3.3.0"
   }
