--- a/backend/layers/dependencies/nodejs/package.json
+++ b/backend/layers/dependencies/nodejs/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "aws4": "^1.13.2",
+    "aws-sdk": "^2.1691.0",
     "axios": "^0.24.0",
     "bluebird": "^3.7.2",
     "cd": "^0.3.3",
