--- a/backend/layers/dependencies/nodejs/package.json
+++ b/backend/layers/dependencies/nodejs/package.json
@@ -28,6 +28,7 @@
     "jszip": "^3.10.1",
     "node-fetch": "^3.1.0",
     "redos-detector": "^5.1.3",
-    "yazl": "^3.3.0"
+    "yazl": "^3.3.0",
+    "openai": "^4.76.0"
   }
 }
