--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,9 @@
     "@aws-sdk/client-secrets-manager": "^3.699.0",
     "@aws-sdk/lib-dynamodb": "^3.685.0",
     "@opensearch-project/opensearch": "^2.13.0",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "archiver": "^7.0.1",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1691.0",
@@ -58,6 +61,7 @@
     "jest": "29.7.0",
     "jszip": "^3.10.1",
     "node-fetch": "^3.1.0",
+    "openai": "^4.76.0",
     "pacote": "^21.0.0",
     "redos-detector": "^5.1.3",
     "semver": "^7.6.3",
