--- a/.github/workflows/dev_to_main_check.yml
+++ b/.github/workflows/dev_to_main_check.yml
@@ -15,3 +15,7 @@ jobs:
             echo "Pull requests to main are only allowed from dev branch."
             exit 1
           fi
+      - name: Run End-to-End Tests
+        run: |
+          echo "Running end-to-end tests..."
+          npm run test:e2e
