--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,11 +9,13 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "ESNext",
     "moduleResolution": "bundler",
+    "target": "ESNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "typeRoots": ["./node_modules/@types", "./types"],
     "types": ["node", "mocha"],
     "incremental": true,
     "plugins": [
