--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "aws-amplify": "^6.6.6",
+    "axe-core": "^4.10.2",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
