--- a/.github/workflows/dev_to_main_check.yml
+++ b/.github/workflows/dev_to_main_check.yml
@@ -16,7 +16,7 @@ jobs:
             exit 1
           fi
       - name: Run End-to-End Tests
-        working-directory: backend
         run: |
           echo "Running end-to-end tests..."
+          cd backend
           npm run test:e2e
