added frontend test to ci cd

--- a/.github/workflows/test_frontend.yml
+++ b/.github/workflows/test_frontend.yml
@@ -52,3 +52,7 @@ jobs:
       - name: Build
         working-directory: frontend
         run: npm run build
+      
+      - name: Test
+        working-directory: frontend
+        run: npm test
